<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinDetailActivity">

    <ImageView
        android:id="@+id/ivLogoCoin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvSplash"
        app:layout_constraintEnd_toStartOf="@id/tvSplash"
        app:layout_constraintTop_toTopOf="@id/tvSplash"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/splash"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogoCoin" />

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvSplash"
        app:layout_constraintStart_toEndOf="@id/tvSplash"
        app:layout_constraintTop_toTopOf="@id/tvSplash"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/tvSplash">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tvPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/price"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@id/tvPriceLabel"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="46573"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel"/>
            <TextView
                android:id="@+id/tvMinPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/min_price_per_day"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/tvMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="@android:color/holo_red_light"
                app:layout_constraintStart_toEndOf="@id/tvMinPriceLabel"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel"
                tools:text="46573"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel"/>
            <TextView
                android:id="@+id/tvMaxPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/max_price_per_day"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/tvMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="@android:color/holo_green_light"
                app:layout_constraintStart_toEndOf="@id/tvMaxPriceLabel"
                app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel"
                tools:text="46573"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel"/>
            <TextView
                android:id="@+id/tvLastMarketLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/last_market"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/tvLastMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@id/tvLastMarketLabel"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel"
                tools:text="46573"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel"/>
            <TextView
                android:id="@+id/tvLastUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/last_update"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/tvLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@id/tvLastUpdateLabel"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel"
                tools:text="46573"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>